feat: Mejora del botón de YouTube y centrado en móvil

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,4 +1,4 @@
-<div class="social-links">
+<div class="social-grid">
   <a href="https://twitter.com/tuxed" class="social-link" target="_blank">
     <img src="/assets/images/twitter.png" alt="Twitter" class="social-icon">
     <span>Twitter</span>
@@ -24,34 +24,3 @@
     <span>GitHub</span>
   </a>
 </div>
-
-<style>
-.social-links {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin: 2rem 0;
-}
-
-.social-link {
-    display: flex;
-    align-items: center;
-    padding: 1rem;
-    background-color: #f8f9fa;
-    border-radius: 8px;
-    text-decoration: none;
-    color: #333;
-    transition: all 0.3s ease;
-}
-
-.social-link:hover {
-    background-color: #e9ecef;
-    transform: translateX(5px);
-}
-
-.social-icon {
-    width: 24px;
-    height: 24px;
-    margin-right: 1rem;
-}
-</style>
