feat: Mejora de iconos sociales en móvil y estructura semántica

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,26 +1,26 @@
-<div class="social-grid">
-  <a href="https://twitter.com/tuxed" class="social-link" target="_blank">
-    <img src="/assets/images/twitter.png" alt="Twitter" class="social-icon">
-    <span>Twitter</span>
+<nav class="social-grid">
+  <a href="https://twitter.com/tuxed" class="social-link" target="_blank" rel="me">
+    <img src="/assets/images/icons/x.svg" alt="X (Twitter)" class="social-icon">
+    <span>X (Twitter)</span>
   </a>
   
-  <a href="https://www.linkedin.com/in/tuxed/" class="social-link" target="_blank">
-    <img src="/assets/images/linkedin.png" alt="LinkedIn" class="social-icon">
+  <a href="https://www.linkedin.com/in/tuxed/" class="social-link" target="_blank" rel="me">
+    <img src="/assets/images/icons/linkedin.svg" alt="LinkedIn" class="social-icon">
     <span>LinkedIn</span>
   </a>
   
-  <a href="https://t.me/aitorroma" class="social-link" target="_blank">
-    <img src="/assets/images/telegram.png" alt="Telegram" class="social-icon">
+  <a href="https://t.me/aitorroma" class="social-link" target="_blank" rel="me">
+    <img src="/assets/images/icons/telegram.svg" alt="Telegram" class="social-icon">
     <span>Telegram</span>
   </a>
   
-  <a href="https://mastodon.social/@aitorroma" class="social-link" target="_blank">
-    <img src="/assets/images/mastodon.svg" alt="Mastodon" class="social-icon">
-    <span>Mastodon</span>
-  </a>
-  
-  <a href="https://github.com/aitorroma" class="social-link" target="_blank">
-    <img src="/assets/images/github.png" alt="GitHub" class="social-icon">
+  <a href="https://github.com/aitorroma" class="social-link" target="_blank" rel="me">
+    <img src="/assets/images/icons/github.svg" alt="GitHub" class="social-icon">
     <span>GitHub</span>
   </a>
-</div>
+  
+  <a href="https://mastodon.social/@aitorroma" class="social-link" target="_blank" rel="me">
+    <img src="/assets/images/icons/mastodon.svg" alt="Mastodon" class="social-icon">
+    <span>Mastodon</span>
+  </a>
+</nav>
