--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,5 +73,17 @@
             this.classList.toggle('active');
         });
     </script>
+
+    {% include footer.html %}
+
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+      kofiWidgetOverlay.draw('aitorroma', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Support Us',
+        'floating-chat.donateButton.background-color': '#00b9fe',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    </script>
 </body>
 </html>
