--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1217,6 +1217,28 @@ nav {
         }
       }
     }
+
+    // Reproductor de video responsivo 16:9
+    .video-embed, .playlist-player {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; // 16:9
+      height: 0;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      background: #000;
+      margin: 1.5rem 0 0;
+    }
+
+    .video-embed iframe, .playlist-player iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
   }
 }
 
