--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1231,7 +1231,7 @@ nav {
       margin: 1.5rem 0 0;
     }
 
-    .video-embed iframe, .playlist-player iframe {
+    .video-embed iframe, .playlist-player iframe, .video-embed video {
       position: absolute;
       top: 0;
       left: 0;
